data/derived/comb/progs/unify/prog5469.ml.out
Characters 199-200:
  | Average (m, n) -> ((eval(m, x, y) +. eval(n, x, y)) /. 2)
                                                           ^
Error: This expression has type int but an expression was expected of type
         float
